--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> 
+    <script src="script.js"></script>
 </head>
 <body>
     <h1 class="underline">Gattoni</h1>
@@ -25,7 +26,7 @@
         <li>C
             <ul>
                 <li>f</li>
-                <li>d</li>
+                <lEi>d</li>
             </ul>
         </li>
     </ul>
